[metadata]
name = my-minipack
version = 1.0.0
description = A small package
url = None
author = fde-fede
author_email = fde-fede@student.42malaga.com
license = GPLv3
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Students
    Topic :: Education
    Topic :: HowTo
    Topic :: Package
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
package_dir =
    = my_minipack
packages = find:
python_requires = >=3.7

[options.packages.find]
where = my_minipack